2do commit reorganizacion de fotos, grid corregido

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+  box-sizing: border-box;
+}
+
 .title{
   display: inline;
   font-family: Arial, Helvetica, sans-serif;
@@ -21,14 +25,22 @@
 .mascotas {
   display: grid;
   grid-gap: 1rem;
-  grid-template-columns: 100px 100px 100px 100px 100px 100px 100px 100px ;
-  grid-template-rows: 100px 100px 100px ;
-  justify-content: center
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+  grid-template-rows: 1fr 1fr 1fr  ;
+  justify-items: center
+
 }
+
+.img-animal {
+  width: 100px;
+  height: 100px;
+  border-radius: 12px;
+}  
+
   
 .logo {
-width:"500";
-height:"600";
+  width:500px;
+  height:600px;
 }
 
 .footer{
@@ -52,15 +64,62 @@ height:"600";
 }
 
 
-@media screen and ( max-width: 720px) { 
-  body { 
-    background-color:#808080
+@media screen and ( max-width: 1400px) { 
+  .mascotas {
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(8,1fr) ;
+    grid-template-rows: repeat(3,1fr)  ;
+    justify-content: center;
+    width: 100vw;
+  
+  }
+}
+
+@media screen and ( max-width: 992px) { 
+  .mascotas {
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(6,1fr) ;
+    grid-template-rows: repeat(4,1fr)  ;
+    justify-content: center;
+    width: 100vw;
+  
   }
 }
 
 @media screen and ( max-width: 768px) { 
-  body { 
-    background-color:#FFFFFF
+  .mascotas {
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(4,1fr) ;
+    grid-template-rows: repeat(6,1fr)  ;
+    justify-content: center;
+    width: 100vw;
+  
   }
 }
 
+@media screen and ( max-width: 576px) { 
+  .mascotas {
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(3,1fr) ;
+    grid-template-rows: repeat(8,1fr)  ;
+    justify-content: center;
+    width: 100vw;
+  
+  }
+}
+
+@media screen and ( max-width: 320px) {
+  .mascotas {
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(2,1fr) ;
+    grid-template-rows: repeat(12,1fr)  ;
+    justify-content: center;
+    width: 100vw;
+  
+  }
+}
