--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 }
   
 .down{
+  display: flex;
   justify-content: center;
 }
 
@@ -35,12 +36,18 @@
   width: 100px;
   height: 100px;
   border-radius: 12px;
+  transition: all 0.3s;
+  transform: scale(1);
 }  
 
-  
+.img-animal:hover {
+  transform: scale(1.3);
+}    
+
+
 .logo {
-  width:500px;
-  height:600px;
+  width:300px;
+  height:200px;
 }
 
 .footer{
