--- a/estilos/compilado.css
+++ b/estilos/compilado.css
@@ -1,2 +1,101 @@
-.h1 {
-  color: #000; }
+* {
+  box-sizing: border-box;
+  font-family: 'Fredoka', sans-serif; }
+
+.texto-blanco {
+  font-size: 33px; }
+
+body {
+  background-image: linear-gradient(#10022f, whitesmoke);
+  min-height: 100vh; }
+
+nav, .page-link {
+  background-color: #4c2882;
+  color: #FFFFFF; }
+
+.title {
+  display: inline;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 40px; }
+
+.down {
+  margin: 15px;
+  display: flex;
+  justify-content: center; }
+
+.encabezado {
+  align-items: center;
+  display: flex;
+  justify-content: center; }
+
+.mascotas {
+  display: grid;
+  grid-gap: 1rem;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr; }
+
+.img-animal {
+  object-fit: cover;
+  width: 100%;
+  height: 250px;
+  border-radius: 12px;
+  transition: all 0.3s;
+  transform: scale(1); }
+
+.img-animal:hover {
+  transform: scale(1.3);
+  z-index: 1000; }
+
+.logo {
+  width: 300px;
+  height: 200px; }
+
+.campo {
+  margin-top: 1rem; }
+
+.footer, .animal-encontrado, .animal-perdido {
+  display: flex;
+  justify-content: space-between; }
+
+.footer3 {
+  color: black; }
+
+.footer2, .footer4 {
+  display: flex;
+  justify-content: space-around; }
+
+@media screen and (max-width: 1400px) {
+  .mascotas {
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    width: 100vw; } }
+
+@media screen and (max-width: 992px) {
+  .logo {
+    width: 200px;
+    height: 150px; }
+  .mascotas {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(4, 1fr); } }
+
+@media screen and (max-width: 768px) {
+  .mascotas {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(6, 1fr); } }
+
+@media screen and (max-width: 576px) {
+  .logo {
+    width: 180px;
+    height: 140px; }
+  .mascotas {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(8, 1fr); } }
+
+@media screen and (max-width: 320px) {
+  .logo {
+    width: 130px;
+    height: 100px; }
+  .mascotas {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(12, 1fr); } }
